<resources>
  <string name="app_name">MVP</string>
  <string name="what_todo_now">现在做什么？</string>
  <string name="open_accout">注册</string>
  <string name="login">登录</string>
  <string name="add_co_merchant">添加联合商户</string>
  <string name="IdCard">身份</string>
  <string name="support_bank_list">您的一类账户银行卡\n支持的银行清单</string>
  <string name="face_recognition_light">足够人脸识别的光线</string>
  <string name="stable_network_env">稳定的网络环境</string>
  <string name="bt_next">下一步</string>
  <string name="bind_banknumber">注意：请使用与绑定银行卡相同的手机号</string>
  <string name="prepare_items">请准备好以下物品</string>
  <string name="bind_phonenumber">步骤1/3：绑定手机号</string>
  <string name="set_loginpwd">设置登录密码</string>
  <string name="setpwd_8_16">登录密码长度8-16位数字或字母</string>
  <string name="confirm_login_pwd">请确认登录密码</string>
  <string name="again_input_sample_login_pwd">再次输入相同的登录密码</string>
  <string name="bind_phonenumber_success">手机号码绑定成功</string>
  <string name="login_anytime">现在您可以随时登录了</string>
  <string name="set_transpwd">设置交易密码</string>
  <string name="confirm_transpwd">确认交易密码</string>
  <string name="account_security">2/3账户安全</string>
  <string name="toready">只需几分钟：\n请准备好</string>
  <string name="transpwd_notnull">交易密码不能为空</string>
  <string name="transpwd_confirm_notnull">确认交易密码不能为空</string>
  <string name="input_six_pwd">请输入6位交易密码</string>
  <string name="input_pwd_confirm">两次输入交易密码不一致</string>
  <string name="input_eazy_pwd">输入的交易密码不能是连续重复数字</string>
  <string name="input_continuous_pwd">输入的交易密码不能是连续数字</string>
  <!--OCR身份证-->
  <string name="idcard_tips_one">使用手机或平板电脑摄像头扫描身份证.</string>
  <string name="idcard_tips_two">第一步，扫描身份证正面.</string>
  <string name="idcard_tips_three">扫描身份证</string>
  <string name="id_card_title">步骤 3/3：身份识别</string>
  <string name="id_card_step_two">第二步，扫描身份证背面</string>
  <string name="id_card_welcom">欢迎，</string>
  <string name="id_card_edit">edit</string>
  <string name="info_confirm">请确认身份信息</string>
  <string name="sex">性别</string>
  <string name="birth_date">出生日期</string>
  <string name="id_number">身份证号</string>
  <string name="address">地址</string>
  <string name="expiry_date">失效日期</string>
  <string name="office">签发机关</string>
  <string name="accept">接受</string>
  <string name="rescan">重新扫描</string>
  <string name="bank_list">银行卡支持列表</string>
  <string name="input_bindcard_msg">输入绑定卡信息</string>
  <string name="number">注意：银行卡预留手机号必须与注册手机号一致</string>
  <!--face-->

  <string name="htjc_app_name">活体检测</string>
  <string name="htjc_hello_world">Hello world!</string>
  <string name="htjc_app_name_overlight">人像活体检测</string>
  <string name="htjc_app_name_picquality">人像质量判断</string>
  <string name="htjc_str_main">活体检测</string>
  <string name="htjc_str_main_btn_quality_judge">质量判断</string>
  <string name="htjc_str_main_btn_start_check">开始检测</string>
  <string name="htjc_str_main_btn_setting">设        置</string>
  <string name="htjc_str_main_btn_tip">左看：头向左偏，朝着卡通图看\n右看：头向右偏，朝着卡通图看</string>

  <string name="htjc_str_live_txt_title">请将脸置于提示框内</string>


  <string name="htjc_str_exit">很抱歉,程序出现异常,即将退出！</string>


  <string name="htjc_attention_not_shake">眼睛请盯着绿色圆圈，不要晃手机和头</string>

  <string name="htjc_btn_inc">&#62;</string>
  <string name="htjc_btn_dec">&#60;</string>
  <string name="htjc_btn_return">返回</string>
  <string name="htjc_btn_resume">重新开始(10s)</string>
  <string name="htjc_friendly_tip_0">未采集到合格的人像,再试一次吧!</string>
  <string name="htjc_friendly_tip_1">恭喜您,检测成功!</string>
  <string name="htjc_friendly_tip_2">很遗憾,检测失败!</string>
  <string name="htjc_friendly_tip_3">操作时间过长!</string>
  <string name="htjc_look_at_me">看着我</string>
  <string name="htjc_pic_decting">数据处理中</string>
  <string name="htjc_no_face">没有检测到人脸</string>
  <string name="htjc_multi_face">检测到多个人脸</string>
  <string name="htjc_no_best_pic">未找到最佳采集照片</string>
  <string name="htjc_camera_not_start">请开启您的摄像头</string>
  <string name="htjc_no_SDCard">"未发现SD卡，请稍后重试或重新启动手机！"</string>
  <string name="htjc_no_facing_front_camera">抱歉打开前置摄像头失败，请稍后再试</string>
  <string name="htjc_no_pass_reason_no_face">没有检测到人脸</string>
  <string name="htjc_no_pass_reason_multi_face">屏幕中存在多张人脸</string>
  <string name="htjc_no_pass_reason_skew_face">请正面面对屏幕</string>
  <string name="htjc_no_pass_reason_too_bright">环境光线过亮</string>
  <string name="htjc_no_pass_reason_too_dark">环境光线过暗</string>
  <string name="htjc_no_pass_reason_too_far">请靠近摄像头</string>
  <string name="htjc_no_pass_reason_blur">图像过于模糊</string>
  <string name="htjc_no_pass_reason_yawangle">左右姿态角度过大</string>
  <string name="htjc_no_pass_reason_picangle">俯仰角度过大</string>
  <string name="htjc_no_pass_reason_mouthclosed">嘴巴张开过大</string>

  <string name="htjc_face_in_box">请将脸部置于提示框中</string>
  <string name="htjc_memory_not_enough">内存不足！</string>
  <string name="htjc_shake_head">请摇头</string>
  <string name="htjc_timerdialog_return">返      回</string>
  <string name="htjc_timerdialog_recheck">重新检测</string>
  <string name="htjc_str_look_left_right">请调整脸部位置，并按提示左看右看</string>
  <string name="htjc_main_title">身份检测</string>
  <string name="htjc_main_remind1">不要阴影，不要逆光</string>
  <string name="htjc_main_remind2">摘掉眼镜，露出额头</string>

  <string name="htjc_guide_time_out">引导检测超时</string>

  <string name="htjc_success_title">检测结果</string>
  <string name="htjc_success_result">检测成功</string>
  <string name="htjc_fail_title">检测结果</string>
  <string name="htjc_fail_result">检测失败</string>
  <string name="htjc_fail_reason">可能失败的原因：</string>

  <string name="htjc_fail_remind_default">检测未通过</string>
  <string name="htjc_fail_remind_noface">1.光线太明或太暗\n2.操作过程中有遮挡，未露出额头\n3.操作过程中幅度过大或非常规操作\n4.未检测到人脸</string>
  <string name="htjc_fail_remind_moreface">屏幕中出现多张人脸</string>
  <string name="htjc_fail_remind_notlive">1.光线太明或太暗\n2.未将脸部置于屏幕正中间\n3.非常规操作</string>
  <string name="htjc_fail_remind_badmovementtype">操作过程中幅度过大或非常规操作</string>
  <string name="htjc_fail_camera_quanxian">你禁止了调用相机的权限</string>
  <string name="htjc_fail_remind_timeout">检测超时</string>
  <string name="htjc_fail_remind_pgp_fail">照片获取失败，请重新检测</string>
  <string name="htjc_fail_remind_3d">非常规操作（3d错误）</string>
  <string name="htjc_fail_remind_badcolor">非常规操作（肤色异常）</string>
  <string name="htjc_fail_remind_badcontinuity">非常规操作</string>
  <string name="htjc_fail_remind_abnormality">非常规操作</string>

  <string name="htjc_guide_remind_dark">光线过暗,请打开灯光</string>
  <string name="htjc_guide_remind_bright">光线过亮,请避开逆光</string>
  <string name="veri_face">请根据屏幕上的说明，使用前置摄像头进行人脸识别.</string>
  <string name="tv_face">开始人脸识别</string>
  <string name="face_money">Transfer money in</string>
  <string name="face_account">Go to my account</string>
  <string name="face_produce">Add a product</string>
  <string name="face_tips_two">What would you like to do now?</string>
  <string name="face_tips_one">You successfully opened an account.  It\'s great to have you!</string>
  <string name="face_success">Success</string>
  <string name="face_result">result</string>
  <string name="face_mMove">mMove</string>
  <string name="face_mRezion">mRezion</string>
  <string name="face_check_pass">check_pass</string>
  <string name="face_pic_result">pic_result</string>
  <string name="face_isRandomable">isRandomable</string>
  <string name="face_actions">actions</string>
  <string name="face_selectActionsNum">selectActionsNum</string>
  <string name="face_singleActionDectTime">singleActionDectTime</string>
  <string name="isWaterable">isWaterable</string>
  <string name="face_openSound">openSound</string>
  <string name="face_comprehensive_set">comprehensive_set</string>
  <string name="idcard_address">地址不能为空</string>
  <string name="bankcard_toast_one">银行账号不能为空</string>
  <string name="bankcard_toast_two">请输入16位或19位银行账号</string>
  <string name="confirm_login_pwd_notnull">确认登录密码不能为空</string>
  <string name="confirm_pwd_must_than_8">确认登录密码必须大于8位数</string>
  <string name="confirm_pwd_mustsame_pwd">确认登录密码必须和登录密码一致</string>
  <string name="loginpwd_notnull">登录密码不能为空</string>
  <string name="loginpwd_morethan_8">登录密码必须大于8位数</string>
  <string name="pwd_toosimple_same_num">登录密码过于简单，不能为重复数字</string>
  <string name="login_pwd_toosimple_continuenum">登录密码过于简单，不能为连续数字</string>
  <string name="agree_agreement">我同意<u>《用户协议》</u>及<u>《税收声明》</u></string>
  <string name="input_phonenumber">请输入手机号</string>
  <string name="input_right_phonenumber">请输入正确的手机号码</string>
  <string name="argee_argeemnet">请同意协议</string>
  <string name="my_phone_number">我的手机号码：</string>
  <string name="login_pwd_ok">您的登录密码即将生效</string>
  <string name="what_safe_pwd"><u>什么是安全登录密码</u></string>
  <string name="card_tips_one">输入卡号</string>
  <string name="select_ip">请选择IP地址</string>
</resources>
