<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/cl_success"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:orientation="vertical"
                                             android:visibility="gone"
                                             tools:context="com.livedetect.SuccessActivity">

    <TextView
        android:id="@+id/tv_tips_one"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_30"
        android:drawableLeft="@drawable/ic_icon_checkmark"
        android:drawablePadding="@dimen/padding_20"
        android:text="@string/face_tips_one"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_tips_two"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_30"
        android:text="@string/face_tips_two"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tips_one"/>

    <Button
        android:id="@+id/btn_to_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_45"
        android:layout_marginRight="@dimen/margin_45"
        android:layout_marginTop="@dimen/margin_45"
        android:background="@drawable/selector_face"
        android:text="@string/face_account"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tips_two"/>

    <Button
        android:id="@+id/btn_transfer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_45"
        android:layout_marginRight="@dimen/margin_45"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@drawable/selector_face"
        android:text="@string/face_money"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_to_account"/>

    <Button
        android:id="@+id/btn_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_45"
        android:layout_marginRight="@dimen/margin_45"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@drawable/selector_face"
        android:text="@string/face_produce"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_transfer"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/htjc_title_bg"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@drawable/htjc_title_return"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/htjc_success_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/htjc_main_bg"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="75dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/success_img"
                android:layout_width="140dp"
                android:layout_height="186dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:background="#ef7c01"
                android:padding="3dp"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/success_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/htjc_success_result"
                android:textColor="#FFFFFF"
                android:textSize="22sp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/btn_again"
                android:layout_width="111dp"
                android:layout_height="42dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:src="@drawable/htjc_btn_again_selector"/>

            <ImageView
                android:id="@+id/btn_return"
                android:layout_width="111dp"
                android:layout_height="42dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:src="@drawable/htjc_btn_return_selector"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>